src/objects/TestCo_Opportunity__x.object
<CustomObject>
    <externalDataSource>TestCo</externalDataSource>
    <externalName>Opportunity</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cumulative_Change_of_Amount_c__c</fullName>
        <externalDeveloperName>Cumulative_Change_of_Amount__c</externalDeveloperName>
        <label>Cumulative Change of Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <externalDeveloperName>CurrencyIsoCode</externalDeveloperName>
        <label>Opportunity Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Support_Teams_c__c</fullName>
        <externalDeveloperName>Deal_Support_Teams__c</externalDeveloperName>
        <label>Deal Support Teams</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <externalDeveloperName>FiscalQuarter</externalDeveloperName>
        <label>Fiscal Quarter</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <externalDeveloperName>FiscalYear</externalDeveloperName>
        <label>Fiscal Year</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal__c</fullName>
        <externalDeveloperName>Fiscal</externalDeveloperName>
        <label>Fiscal Period</label>
        <length>6</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
        <label>Forecast Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <externalDeveloperName>ForecastCategory</externalDeveloperName>
        <label>Forecast Category</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOpenActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpenActivity</externalDeveloperName>
        <label>Has Open Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
        <label>Has Line Item</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOverdueTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOverdueTask</externalDeveloperName>
        <label>Has Overdue Task</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>Closed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWon__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWon</externalDeveloperName>
        <label>Won</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count_c__c</fullName>
        <externalDeveloperName>Line_Item_Count__c</externalDeveloperName>
        <label>Line Item Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Approval_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Management_Approval_Required__c</externalDeveloperName>
        <label>Management Approval Required</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Approval_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Management_Approval__c</externalDeveloperName>
        <label>Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <externalDeveloperName>NextStep</externalDeveloperName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_times_Amount_Changed_c__c</fullName>
        <externalDeveloperName>No_of_times_Amount_Changed__c</externalDeveloperName>
        <label>No of times Amount Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email_Address_c__c</fullName>
        <externalDeveloperName>Owner_Manager_Email_Address__c</externalDeveloperName>
        <label>Owner Manager Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <externalDeveloperName>Pricebook2Id</externalDeveloperName>
        <label>Price Book ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <externalDeveloperName>Probability</externalDeveloperName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_List_c__c</fullName>
        <externalDeveloperName>Product_List__c</externalDeveloperName>
        <label>Product List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <externalDeveloperName>StageName</externalDeveloperName>
        <label>Stage</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncedQuoteId__c</fullName>
        <externalDeveloperName>SyncedQuoteId</externalDeveloperName>
        <label>Quote ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TerritoryId__c</fullName>
        <externalDeveloperName>TerritoryId</externalDeveloperName>
        <label>Territory ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Opportunity Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TestCo Opportunity</label>
    <pluralLabel>TestCo Opportunities</pluralLabel>
</CustomObject>